; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/crypto/extr_kuhl_m_sekurlsa_nt5.c_kuhl_m_sekurlsa_nt5_init.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/crypto/extr_kuhl_m_sekurlsa_nt5.c_kuhl_m_sekurlsa_nt5_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kuhl_m_sekurlsa_nt5_KeyInit = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_sekurlsa_nt5_init() #0 {
  %1 = load i32, i32* @kuhl_m_sekurlsa_nt5_KeyInit, align 4
  %2 = call i32 @NT_SUCCESS(i32 %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 (...) @kuhl_m_sekurlsa_nt5_LsaInitializeProtectedMemory()
  store i32 %5, i32* @kuhl_m_sekurlsa_nt5_KeyInit, align 4
  br label %6

6:                                                ; preds = %4, %0
  %7 = load i32, i32* @kuhl_m_sekurlsa_nt5_KeyInit, align 4
  ret i32 %7
}

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @kuhl_m_sekurlsa_nt5_LsaInitializeProtectedMemory(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
